--- a/web/templates/header.html
+++ b/web/templates/header.html
@@ -1,5 +1,5 @@
 {% extends 'base.html' %}
-{% block title %} Flask CRUD Web Application{% endblock %}
+{% block title %} Flask Web Application{% endblock %}
 
 {% block body %}
 
