--- a/web/templates/index.html
+++ b/web/templates/index.html
@@ -78,6 +78,12 @@
                     <div class="form-group">
                         <label>Gender:</label>
                         <input type="text" class="form-control" name="gender" value="{{row.gender}}">
+                        <select class="form-select" aria-label="Default select example">
+                            <option selected>Gender</option>
+                            <option value="{{row.gender}}">Male</option>
+                            <option value="{{row.gender}}">Female</option>
+                            <option value="{{row.gender}}">Others</option>
+                        </select>
                     </div>
                     <div class="form-group">
                         <button class="btn btn-primary" type="submit">Update</button>
@@ -118,6 +124,12 @@
                     <div class="form-group">
                         <label>Gender:</label>
                         <input type="text" class="form-control" name="gender" required="1">
+                        <select class="form-select" aria-label="Default select example">
+                            <option selected>Gender</option>
+                            <option value="{{row.gender}}">Male</option>
+                            <option value="{{row.gender}}">Female</option>
+                            <option value="{{row.gender}}">Others</option>
+                        </select>
                     </div>
                     <div class="form-group">
                         <button class="btn btn-primary" type="submit">Add Student</button>
